# fib-rs

./: Cargo.toml  LICENSE  README.md  pyproject.toml
src/: lib.rs
